add schema generation feature
